rsvp/policy-ast/src/test/resources/antlr/negative/illegal-shadow-4.cedarschema
entity Foo;
namespace Bar {
    type Foo = String;
}

// EXPECTED: Reference (R) Foo illegally shadowed
